--- a/Paastopaivakirja/src/main/resources/fxml/LoginScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/LoginScene.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9" fx:controller="com.example.PaastoPaivakirja.ui.LoginSceneController">
+<AnchorPane stylesheets="@styles/styles.css" id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9" fx:controller="com.example.PaastoPaivakirja.ui.LoginSceneController">
     <children>
         <Button fx:id="button" layoutX="32.0" layoutY="107.0" onAction="#HelloWorld" text="Hello" />
     </children>
