--- a/Paastopaivakirja/src/main/resources/fxml/LoginScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/LoginScene.fxml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane stylesheets="@styles/styles.css" id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9" fx:controller="com.example.PaastoPaivakirja.ui.LoginSceneController">
+<AnchorPane id="AnchorPane" prefHeight="277.0" prefWidth="508.0" stylesheets="@styles/styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.PaastoPaivakirja.ui.LoginSceneController">
     <children>
-        <Button fx:id="button" layoutX="32.0" layoutY="107.0" onAction="#Login" text="Kirjaudu" />
+        <Text layoutX="17.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Käyttäjätunnus" />
+        <Text layoutX="17.0" layoutY="123.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Salasana" />
+        <TextField fx:id="username" layoutX="111.0" layoutY="66.0" prefHeight="25.0" prefWidth="126.0" />
+        <PasswordField fx:id="password" layoutX="111.0" layoutY="106.0" prefHeight="25.0" prefWidth="126.0" />
+        <Button fx:id="login" onAction="#handleLogin" layoutX="111.0" layoutY="153.0" mnemonicParsing="false" text="Kirjaudu" />
+        <Separator layoutX="251.0" layoutY="39.0" orientation="VERTICAL" prefHeight="200.0" />
+        <Button fx:id="register" onAction="#handleNewUser" layoutX="324.0" layoutY="106.0" mnemonicParsing="false" text="Luo uusi tunnus" />
     </children>
 </AnchorPane>
