--- a/Paastopaivakirja/src/main/resources/fxml/homeScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/homeScene.fxml
@@ -16,6 +16,8 @@
                 <Button layoutX="25.0" layoutY="188.0" mnemonicParsing="false" text="Lisää tämän päivän päästöt" />
                 <Button layoutX="25.0" layoutY="238.0" mnemonicParsing="false" text="Täydennä menneiden päivien päästöjä" />
                 <Button onAction="#logOut" layoutX="450.0" layoutY="238.0" mnemonicParsing="false" text="Kirjaudu ulos" />
+                <Text layoutX="418.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tervetuloa" wrappingWidth="149.0" />
+                <Text fx:id="name" layoutX="418.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="" wrappingWidth="149.0" />
             </children>
         </AnchorPane>
     </children>
