--- a/Paastopaivakirja/src/main/resources/fxml/HomeScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/HomeScene.fxml
@@ -10,10 +10,11 @@
         <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
             <children>
                 <Text layoutX="81.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="149.0" />
-                <Text fx:id="yearlyTotal" layoutX="30.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kiinteät vuosipäästösi:" wrappingWidth="300.0" />
-                <Text layoutX="30.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kertyneet vuosipäästösi:" wrappingWidth="203.13671875" />
-                <Text layoutX="30.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Yhteensä:" wrappingWidth="203.13671875" />
-                <Button layoutX="25.0" layoutY="188.0" mnemonicParsing="false" text="Lisää tämän päivän päästöt" />
+                <Text fx:id="yearlyTotal" layoutX="30.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kiinteät vuosipäästösi:" wrappingWidth="300.0" />
+                <Text layoutX="30.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tämänpäiväiset päästösi:" wrappingWidth="300.0" />
+                <Text layoutX="30.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kertyneet vuosipäästösi:" wrappingWidth="203.13671875" />
+                <Text layoutX="30.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Yhteensä:" wrappingWidth="203.13671875" />
+                <Button onAction="#calculateToday" layoutX="25.0" layoutY="188.0" mnemonicParsing="false" text="Lisää tämän päivän päästöt" />
                 <Button layoutX="25.0" layoutY="238.0" mnemonicParsing="false" text="Täydennä menneiden päivien päästöjä" />
                 <Button onAction="#logOut" layoutX="450.0" layoutY="238.0" mnemonicParsing="false" text="Kirjaudu ulos" />
                 <Text layoutX="418.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tervetuloa" wrappingWidth="149.0" />
