--- a/Paastopaivakirja/src/main/resources/fxml/FoodEmissionScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/FoodEmissionScene.fxml
@@ -10,7 +10,7 @@
     <children>
         <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
             <children>
-                <Button layoutX="434.0" layoutY="340.0" mnemonicParsing="false" text="Tallenna ja siirry seuraavaan" />
+                <Button onAction="#submit" layoutX="434.0" layoutY="340.0" mnemonicParsing="false" text="Tallenna ja siirry seuraavaan" />
                 <Text layoutX="30.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Täydennä tänään käyttämäsi ruoka-aineet" wrappingWidth="134.0" />
                 
                 <Text layoutX="25.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nauta ja lammas" wrappingWidth="93.13671875" />
@@ -41,7 +41,19 @@
                 <Slider fx:id="restaurantSlider" onValueChange="#setRestaurant" layoutX="128.0" layoutY="345.0" max="500.0" prefHeight="14.0" prefWidth="140.0" />
                 <Text fx:id="restaurantSliderValue" layoutX="277.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
                 
-                <Button layoutX="457.0" layoutY="30.0" mnemonicParsing="false" text="Palauta oletusarvot" />
+                
+                <Text layoutX="328.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kasvihuonekasvikset" wrappingWidth="111.13671875" />
+                <Slider fx:id="vegetableSlider" onValueChange="#setVegetable" layoutX="446.0" layoutY="85.0" max="500.0" />
+                <Text fx:id="vegetableSliderValue" layoutX="590.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
+            
+                <Text layoutX="328.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Maitotuotteet" wrappingWidth="111.13671875" />
+                <Slider fx:id="milkSlider" onValueChange="#setMilk" layoutX="446.0" layoutY="125.0" max="500.0" />
+                <Text fx:id="milkSliderValue" layoutX="590.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
+                
+                 <Text layoutX="328.0" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" 
+                       text="Huom: näiden kategorioiden ulkopuolelle jäävät ruoka-aineet lasketaan suoraan kiinteisiin vuosipäästöihin" wrappingWidth="300.0" />
+                
+                <Button onAction="#setDefaultValues" layoutX="457.0" layoutY="30.0" mnemonicParsing="false" text="Palauta oletusarvot" />
             </children>
         </AnchorPane>
     </children>
