--- a/Paastopaivakirja/src/main/resources/fxml/FoodEmissionScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/FoodEmissionScene.fxml
@@ -10,7 +10,7 @@
     <children>
         <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
             <children>
-                <Button onAction="#submit" layoutX="434.0" layoutY="340.0" mnemonicParsing="false" text="Tallenna ja siirry seuraavaan" />
+                <Button onAction="#submit" layoutX="434.0" layoutY="340.0" mnemonicParsing="false" text="Tallenna ja palaa" />
                 <Text layoutX="30.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Täydennä tänään käyttämäsi ruoka-aineet" wrappingWidth="134.0" />
                 
                 <Text layoutX="25.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nauta ja lammas" wrappingWidth="93.13671875" />
