--- a/Paastopaivakirja/src/main/resources/fxml/HomeScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/HomeScene.fxml
@@ -14,12 +14,19 @@
                 <Text fx:id="todaysTotal" layoutX="30.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tämänpäiväiset päästösi:" wrappingWidth="300.0" />
                 <Text layoutX="30.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kertyneet vuosipäästösi:" wrappingWidth="203.13671875" />
                 <Text layoutX="30.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Yhteensä:" wrappingWidth="203.13671875" />
-                <Button onAction="#calculateToday" layoutX="25.0" layoutY="188.0" mnemonicParsing="false" text="Lisää tämän päivän päästöt" />
-                <Button layoutX="25.0" layoutY="238.0" mnemonicParsing="false" text="Täydennä menneiden päivien päästöjä" />
                 <Button onAction="#logOut" layoutX="450.0" layoutY="238.0" mnemonicParsing="false" text="Kirjaudu ulos" />
                 <Text fx:id="name" layoutX="418.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="" wrappingWidth="149.0" />
                 <Text fx:id="startDate" layoutX="418.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tervetuloa" wrappingWidth="149.0" />
                 <Button onAction="#calculateYearlyEmissions" layoutX="25.0" layoutY="148.0" mnemonicParsing="false" text="Laske kiinteät vuosipäästöt" />
+           
+                <Button layoutX="25.0" layoutY="190.0" mnemonicParsing="false" onAction="#calculateTodaysFood" text="Lisää tämän päivän ruokapäästöt" />
+                <Button layoutX="24.0" layoutY="230.0" mnemonicParsing="false" onAction="#calculateTodaysTraffic" text="Lisää tämän päivän liikennepäästöt" />
+                <Button layoutX="26.0" layoutY="270.0" mnemonicParsing="false" text="Lisää tämän päivän kulutuspäästöt" />
+                <Button layoutX="25.0" layoutY="310.0" mnemonicParsing="false" text="Täydennä menneiden päivien päästöjä" />
+            
+                <Text fx:id="foodCheck" layoutX="234.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
+                <Text fx:id="trafficCheck" layoutX="234.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
+                <Text fx:id="consumptionCheck" layoutX="234.0" layoutY="283.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
             </children>
         </AnchorPane>
     </children>
