--- a/Paastopaivakirja/src/main/resources/fxml/HomeScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/HomeScene.fxml
@@ -21,7 +21,7 @@
            
                 <Button layoutX="25.0" layoutY="190.0" mnemonicParsing="false" onAction="#calculateTodaysFood" text="Lisää tämän päivän ruokapäästöt" />
                 <Button layoutX="24.0" layoutY="230.0" mnemonicParsing="false" onAction="#calculateTodaysTraffic" text="Lisää tämän päivän liikennepäästöt" />
-                <Button layoutX="26.0" layoutY="270.0" mnemonicParsing="false" text="Lisää tämän päivän kulutuspäästöt" />
+                <Button layoutX="26.0" layoutY="270.0" mnemonicParsing="false" onAction="#calculateTodaysConsumption" text="Lisää tämän päivän kulutuspäästöt" />
                 <Button layoutX="25.0" layoutY="310.0" mnemonicParsing="false" text="Täydennä menneiden päivien päästöjä" />
             
                 <Text fx:id="foodCheck" layoutX="260.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
