--- a/Paastopaivakirja/src/main/resources/fxml/HomeScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/HomeScene.fxml
@@ -22,7 +22,7 @@
                 <Button layoutX="25.0" layoutY="190.0" mnemonicParsing="false" onAction="#calculateTodaysFood" text="Lisää tämän päivän ruokapäästöt" />
                 <Button layoutX="24.0" layoutY="230.0" mnemonicParsing="false" onAction="#calculateTodaysTraffic" text="Lisää tämän päivän liikennepäästöt" />
                 <Button layoutX="26.0" layoutY="270.0" mnemonicParsing="false" onAction="#calculateTodaysConsumption" text="Lisää tämän päivän kulutuspäästöt" />
-                <Button layoutX="25.0" layoutY="310.0" mnemonicParsing="false" onAction="#fillDays" text="Täydennä menneiden päivien päästöjä" />
+                <Button fx:id="button" layoutX="25.0" layoutY="310.0" mnemonicParsing="false" onAction="#fillDays" text="Täydennä menneiden päivien päästöjä" />
             
                 <Text fx:id="foodCheck" layoutX="260.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
                 <Text fx:id="trafficCheck" layoutX="260.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
