--- a/Paastopaivakirja/src/main/resources/fxml/TrafficEmissionScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/TrafficEmissionScene.fxml
@@ -51,7 +51,7 @@
                 <Slider fx:id="airplaneSlider" onValueChange="#setAirplane" layoutX="423.0" layoutY="125.0" max="2500.0"  />
                 <Text fx:id="airplaneSliderValue" layoutX="585.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 km" />
           
-                <Button onAction="#setDefaultValues" layoutX="457.0" layoutY="30.0" mnemonicParsing="false" text="Palauta oletusarvot" />      
+                <Button onAction="#setDefaultValues" layoutX="457.0" layoutY="30.0" mnemonicParsing="false" text="Nollaa" />      
             </children>
         </AnchorPane>
     </children>
