--- a/Paastopaivakirja/src/main/resources/fxml/TrafficEmissionScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/TrafficEmissionScene.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
@@ -10,8 +11,11 @@
     <children>
         <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
             <children>
+                <DatePicker fx:id="date" layoutX="217.0" layoutY="30.0" prefHeight="25.0" prefWidth="134.0" />
+                <Button onAction="#selectDate" layoutX="351.0" layoutY="30.0" mnemonicParsing="false" text="Hae" />
+                                
                 <Button layoutX="470.0" layoutY="340.0" mnemonicParsing="false" onAction="#submit" text="Tallenna ja palaa" />
-                <Text layoutX="30.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Täydennä tänään matkustamasi matkat" wrappingWidth="134.0" />
+                <Text layoutX="30.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Täydennä matkustamasi matkat" wrappingWidth="134.0" />
                 
                 <Text layoutX="25.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Auto" wrappingWidth="93.13671875" />
                 <Slider fx:id="carSlider" onValueChange="#setCar" layoutX="128.0" layoutY="85.0" max="500.0"  />
